src/dts/tests/nested_modules/nested_modules.exp

nested_modules.js:6:9,14: string
This type is incompatible with
[LIB] nested_modules.js:14:26,28: number

nested_modules.js:8:18,21: property y
Error:
nested_modules.js:8:9,14: string
This type is incompatible with
[LIB] nested_modules.js:6:15,17: number

nested_modules.js:9:20,33: call of method successor
Error:
nested_modules.js:9:11,16: string
This type is incompatible with
[LIB] nested_modules.js:28:53,55: number

Found 3 errors
