src/dts/tests/nested_modules/nested_modules.js
// @flow
var M = require('M');
var P = require('P');
var F = require('F');

var a : string = P.a;
var cc = new M.C();
var x : string = cc.y;
var two : string = F.successor(1);
